--- a/project.json
+++ b/project.json
@@ -489,6 +489,9 @@
 		},
 		"\\components\\path.h": {
 			"sdcard": false
+		},
+		"\\components\\move.h": {
+			"sdcard": false
 		}
 	},
 	"ideVersion": 10000,
